Bug 1906793 - Fix invalidation of sync-failing font loads. r=jfkthame,layout-reviewers

I haven't been able to construct a test-case without InspectorUtils
either. Tried to construct a test-case with InspectorUtils, but that
doesn't work either because the DOM mutation from
`document.documentElement.classList = ""` (to remove `reftest-wait`)
is enough to schedule a style flush (for invalidation) which ends
up triggering the update.

Differential Revision: https://phabricator.services.mozilla.com/D216059