layout/style/nsFontFaceLoader.cpp
@@ -191,11 +191,12 @@ void nsFontFaceLoader::LoadTimerCallback(nsITimer* aTimer, void* aClosure) {
   // before, we mark this entry as "loading slowly", so the fallback
   // font will be used in the meantime, and tell the context to refresh.
   if (updateUserFontSet) {
-    nsTArray<RefPtr<gfxUserFontSet>> fontSets;
+    // FIXME(emilio): This is basically the same as FontLoadComplete... Also
+    // shouldn't this increment the generation for worker font sets?
+    AutoTArray<RefPtr<gfxUserFontSet>, 4> fontSets;
     ufe->GetUserFontSets(fontSets);
     for (gfxUserFontSet* fontSet : fontSets) {
-      nsPresContext* ctx = FontFaceSetImpl::GetPresContextFor(fontSet);
-      if (ctx) {
+      if (nsPresContext* ctx = FontFaceSetImpl::GetPresContextFor(fontSet)) {
         fontSet->IncrementGeneration();
         ctx->UserFontSetUpdated(ufe);
         LOG(("userfonts (%p) timeout reflow for pres context %p display %d\n",
@@ -303,22 +304,11 @@ nsresult nsFontFaceLoader::FontLoadComplete() {
   }
 
   // when new font loaded, need to reflow
-  nsTArray<RefPtr<gfxUserFontSet>> fontSets;
-  mUserFontEntry->GetUserFontSets(fontSets);
-  for (gfxUserFontSet* fontSet : fontSets) {
-    nsPresContext* ctx = FontFaceSetImpl::GetPresContextFor(fontSet);
-    if (ctx) {
-      // Update layout for the presence of the new font.  Since this is
-      // asynchronous, reflows will coalesce.
-      ctx->UserFontSetUpdated(mUserFontEntry);
-      LOG(("userfonts (%p) reflow for pres context %p\n", this, ctx));
-    }
-  }
+  mUserFontEntry->FontLoadComplete();
 
   MOZ_DIAGNOSTIC_ASSERT(mFontFaceSet);
   mFontFaceSet->RemoveLoader(this);
-  auto* doc = mFontFaceSet->GetDocument();
-  if (doc) {
+  if (auto* doc = mFontFaceSet->GetDocument()) {
     doc->UnblockOnload(false);
   }
   mFontFaceSet = nullptr;
